@@ -34,6 +34,8 @@
 	postgresql and mdbtools return error code of 1 rather than 0 for all
 		errors now
 	tweaked odbc driver to work with Oracle Heterogenous Agent (dblinks)
+	fixed bugs related to autocommit with db's that support transaction
+		blocks
 
 0.58 - updated spawn() calls to detach on windows
 	added support for sqlrelay.conf.d
